--- a/beamerthemesthlm.sty
+++ b/beamerthemesthlm.sty
@@ -219,7 +219,7 @@ xrightmargin=0.5em
     {\usebeamerfont{institute}\usebeamercolor[fg]{institute}\insertinstitute\par}%
     \fi%
     \vfill
- 	\hfill \includegraphics[height=10mm]{img/logo_geolab.png} \hspace{5mm} \par
+ 	\hfill \includegraphics[height=10mm]{img/logo_geolab.png} \includegraphics[height=10mm]{img/Logo_Shem}\hspace{5mm} \par
     \vspace*{5mm}
   \end{minipage}
 }
